two way data binding
using [(ngModel0] ="varName" i made two way data binding,  to input tag in .html, the varName is defined in .ts file, which gets the data from input of .html, also can send this data back from component to view i.e. ts to html, so when i say <p>{{varName}}</p> in html it displays given input.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,3 +43,12 @@ eg: *ngFor, *ngIf, *ngSwitch
 <div [ngClass]="classVariable">ngClass attribute directive with class name of variable, being set in .component.ts</div>
 
 <div [ngClass]="[classVar1, classVariable]">ngClass with 2 different class names, one and classVariable(two) being passed as an array ['','']</div>
+
+<section>
+    <h4>Two-way data binding example</h4>
+
+    <div>
+        <input [(ngModel)] = "sweetNameVar" />
+        <p >Your Favorite Sweet is {{sweetNameVar}}</p>
+    </div>
+</section>
