--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -20,4 +20,19 @@
         <td>{{ev}}</td>
         <td>{{od}}</td>
     </tr>
+   
 </table>
+
+<section>
+        
+    <input type="text" [placeholder]="inputPlaceHolder">
+
+</section>
+
+<section>
+<div [innerHTML]="innerHTMLVar"></div>
+</section>
+
+<section>
+    <button (click)="showHoverEffect('Maanas');">One Way Data Binding-Event Binding Click Event Example</button>
+</section>
